[package]
name = "delaunay3d"
version = "0.1.0"
edition = "2021"
authors = ["Dmytro Banin <dima_banin@hotmail.com>"]
description = "A library to compute Delaunay triangulations in 3D (tetrahedralizations)"
repository = "https://github.com/dmyyy/delaunay3d"
keywords = ["delaunay", "delaunay3d"]
readme = "README.md"
license = "MIT"

[dependencies]
bevy = "0.10.0"
robust = "1.0.0"
ordered-float = { version = "3.4.0", default-features = false }
